--- a/docker-compose.test.yaml
+++ b/docker-compose.test.yaml
@@ -6,12 +6,13 @@ services:
       context: ./
     container_name: pecunia-ws-container
     environment: 
-      NODE_ENV: production
-      Server__Port: 80
+      NODE_ENV: test
+      coverage: "true"
+      Server__Port: 3005
       Logger__Level: "info"
       Logger__Stream: "bunyan-debug-stream"
       Logger__ShowHeaders: "false"
     ports:
-      - "50300:80"
+      - "3005:3005"
     volumes:
       - "./:/home/node/app"
