--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@types/jest": "^26.0.8",
     "@types/nconf": "^0.10.0",
     "@types/node": "^14.0.27",
+    "@types/supertest": "^2.0.10",
     "@typescript-eslint/eslint-plugin": "^3.7.1",
     "@typescript-eslint/parser": "^3.7.1",
     "eslint": "^7.6.0",
@@ -62,6 +63,7 @@
     "nodemon": "^2.0.4",
     "prettier": "^2.0.5",
     "rimraf": "^3.0.2",
+    "supertest": "^4.0.2",
     "ts-jest": "^26.1.4",
     "typescript": "^3.9.7"
   },
