--- a/.dockerignore
+++ b/.dockerignore
@@ -1,9 +1,11 @@
 node_modules
 npm-debug.log
-/dist
+dist/
+apidoc/
 *.tsbuildinfo
 .eslintcache
 .git
 .gitattributes
 .gitignore
 README.md
+custom/
