--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,10 +1,10 @@
 version: "3.8"
 
 services:
-  express-typescript-ws:
+  express-ts-webserver:
     build:
       context: ./
-    container_name: express-ws-container
+    container_name: express-ts-webserver
     environment: 
       NODE_ENV: production
       Server__Port: 80
