--- a/package.json
+++ b/package.json
@@ -42,9 +42,11 @@
     "apidoc": "rimraf apidoc && apidoc -i src/ -o apidoc/"
   },
   "devDependencies": {
+    "@types/body-parser": "^1.19.0",
     "@types/bunyan": "^1.8.6",
     "@types/errorhandler": "^1.5.0",
     "@types/express": "^4.17.8",
+    "@types/express-validator": "^3.0.0",
     "@types/jest": "^26.0.8",
     "@types/nconf": "^0.10.0",
     "@types/node": "^14.0.27",
@@ -70,10 +72,12 @@
     "typescript": "^3.9.7"
   },
   "dependencies": {
+    "body-parser": "^1.19.0",
     "bunyan": "^1.8.14",
     "bunyan-debug-stream": "^2.0.0",
     "errorhandler": "^1.5.1",
     "express": "^4.17.1",
+    "express-validator": "^6.6.1",
     "nconf": "^0.10.0"
   },
   "repository": {
